extra/y.output
   0  $accept : doc $end

   1  doc : book

   2  book : OBJ_OPEN TAG ATT_SEPARATOR BOOK COMMA edition CONTENT ATT_SEPARATOR ARRAY_OPEN content ARRAY_CLOSE OBJ_CLOSE

   3  edition : EDITION ATT_SEPARATOR VALUE COMMA

   4  content : dedication COMMA preface COMMA parts author_notes
   5          | preface COMMA parts author_notes

   6  dedication : OBJ_OPEN TAG ATT_SEPARATOR DEDICATION COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE

   7  pcdata : PCDATA

   8  preface : OBJ_OPEN TAG ATT_SEPARATOR PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE

   9  parts : part
  10        | parts COMMA part

  11  part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE
  12       | OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE

  13  part_cont : toc COMMA chapters lof_lot

  14  lof_lot :
  15          | COMMA lof COMMA lot
  16          | COMMA lot
  17          | COMMA lof

  18  id : ID ATT_SEPARATOR VALUE COMMA

  19  title : TITLE ATT_SEPARATOR VALUE COMMA

  20  toc : OBJ_OPEN TAG ATT_SEPARATOR TOC COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN items ARRAY_CLOSE OBJ_CLOSE

  21  items : item
  22        | items COMMA item

  23  item : OBJ_OPEN TAG ATT_SEPARATOR ITEM COMMA id_ref CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE

  24  id_ref : ID ATT_SEPARATOR VALUE COMMA

  25  chapters : chapter
  26           | chapters COMMA chapter

  27  chapter : OBJ_OPEN TAG ATT_SEPARATOR CHAPTER COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN sections ARRAY_CLOSE OBJ_CLOSE

  28  sections : section
  29           | sections COMMA section

  30  section : OBJ_OPEN TAG ATT_SEPARATOR SECTION COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN section_content ARRAY_CLOSE OBJ_CLOSE

  31  section_content : section_content COMMA pcdata
  32                  | section_content COMMA section
  33                  | section_content COMMA figure
  34                  | section_content COMMA table
  35                  | pcdata
  36                  | section
  37                  | figure
  38                  | table

  39  figure : OBJ_OPEN TAG ATT_SEPARATOR FIGURE COMMA id caption path OBJ_CLOSE

  40  caption : CAPTION ATT_SEPARATOR VALUE COMMA

  41  path : PATH ATT_SEPARATOR VALUE

  42  table : OBJ_OPEN TAG ATT_SEPARATOR TABLE COMMA id caption CONTENT ATT_SEPARATOR ARRAY_OPEN rows ARRAY_CLOSE OBJ_CLOSE

  43  rows : row
  44       | rows COMMA row

  45  row : OBJ_OPEN TAG ATT_SEPARATOR ROW COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN cells ARRAY_CLOSE OBJ_CLOSE

  46  cells : cell
  47        | cells COMMA cell

  48  cell : OBJ_OPEN TAG ATT_SEPARATOR CELL COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE

  49  lof : OBJ_OPEN TAG ATT_SEPARATOR LOF COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN items ARRAY_CLOSE OBJ_CLOSE

  50  lot : OBJ_OPEN TAG ATT_SEPARATOR LOT COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN items ARRAY_CLOSE OBJ_CLOSE

  51  author_notes :
  52               | COMMA OBJ_OPEN TAG ATT_SEPARATOR AUTHOR_NOTES COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN notes ARRAY_CLOSE OBJ_CLOSE

  53  notes : note
  54        | notes COMMA note

  55  note : OBJ_OPEN TAG ATT_SEPARATOR NOTE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE

state 0
	$accept : . doc $end  (0)

	OBJ_OPEN  shift 1
	.  error

	doc  goto 2
	book  goto 3


state 1
	book : OBJ_OPEN . TAG ATT_SEPARATOR BOOK COMMA edition CONTENT ATT_SEPARATOR ARRAY_OPEN content ARRAY_CLOSE OBJ_CLOSE  (2)

	TAG  shift 4
	.  error


state 2
	$accept : doc . $end  (0)

	$end  accept


state 3
	doc : book .  (1)

	.  reduce 1


state 4
	book : OBJ_OPEN TAG . ATT_SEPARATOR BOOK COMMA edition CONTENT ATT_SEPARATOR ARRAY_OPEN content ARRAY_CLOSE OBJ_CLOSE  (2)

	ATT_SEPARATOR  shift 5
	.  error


state 5
	book : OBJ_OPEN TAG ATT_SEPARATOR . BOOK COMMA edition CONTENT ATT_SEPARATOR ARRAY_OPEN content ARRAY_CLOSE OBJ_CLOSE  (2)

	BOOK  shift 6
	.  error


state 6
	book : OBJ_OPEN TAG ATT_SEPARATOR BOOK . COMMA edition CONTENT ATT_SEPARATOR ARRAY_OPEN content ARRAY_CLOSE OBJ_CLOSE  (2)

	COMMA  shift 7
	.  error


state 7
	book : OBJ_OPEN TAG ATT_SEPARATOR BOOK COMMA . edition CONTENT ATT_SEPARATOR ARRAY_OPEN content ARRAY_CLOSE OBJ_CLOSE  (2)

	EDITION  shift 8
	.  error

	edition  goto 9


state 8
	edition : EDITION . ATT_SEPARATOR VALUE COMMA  (3)

	ATT_SEPARATOR  shift 10
	.  error


state 9
	book : OBJ_OPEN TAG ATT_SEPARATOR BOOK COMMA edition . CONTENT ATT_SEPARATOR ARRAY_OPEN content ARRAY_CLOSE OBJ_CLOSE  (2)

	CONTENT  shift 11
	.  error


state 10
	edition : EDITION ATT_SEPARATOR . VALUE COMMA  (3)

	VALUE  shift 12
	.  error


state 11
	book : OBJ_OPEN TAG ATT_SEPARATOR BOOK COMMA edition CONTENT . ATT_SEPARATOR ARRAY_OPEN content ARRAY_CLOSE OBJ_CLOSE  (2)

	ATT_SEPARATOR  shift 13
	.  error


state 12
	edition : EDITION ATT_SEPARATOR VALUE . COMMA  (3)

	COMMA  shift 14
	.  error


state 13
	book : OBJ_OPEN TAG ATT_SEPARATOR BOOK COMMA edition CONTENT ATT_SEPARATOR . ARRAY_OPEN content ARRAY_CLOSE OBJ_CLOSE  (2)

	ARRAY_OPEN  shift 15
	.  error


state 14
	edition : EDITION ATT_SEPARATOR VALUE COMMA .  (3)

	.  reduce 3


state 15
	book : OBJ_OPEN TAG ATT_SEPARATOR BOOK COMMA edition CONTENT ATT_SEPARATOR ARRAY_OPEN . content ARRAY_CLOSE OBJ_CLOSE  (2)

	OBJ_OPEN  shift 16
	.  error

	content  goto 17
	dedication  goto 18
	preface  goto 19


state 16
	dedication : OBJ_OPEN . TAG ATT_SEPARATOR DEDICATION COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (6)
	preface : OBJ_OPEN . TAG ATT_SEPARATOR PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	TAG  shift 20
	.  error


state 17
	book : OBJ_OPEN TAG ATT_SEPARATOR BOOK COMMA edition CONTENT ATT_SEPARATOR ARRAY_OPEN content . ARRAY_CLOSE OBJ_CLOSE  (2)

	ARRAY_CLOSE  shift 21
	.  error


state 18
	content : dedication . COMMA preface COMMA parts author_notes  (4)

	COMMA  shift 22
	.  error


state 19
	content : preface . COMMA parts author_notes  (5)

	COMMA  shift 23
	.  error


state 20
	dedication : OBJ_OPEN TAG . ATT_SEPARATOR DEDICATION COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (6)
	preface : OBJ_OPEN TAG . ATT_SEPARATOR PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	ATT_SEPARATOR  shift 24
	.  error


state 21
	book : OBJ_OPEN TAG ATT_SEPARATOR BOOK COMMA edition CONTENT ATT_SEPARATOR ARRAY_OPEN content ARRAY_CLOSE . OBJ_CLOSE  (2)

	OBJ_CLOSE  shift 25
	.  error


state 22
	content : dedication COMMA . preface COMMA parts author_notes  (4)

	OBJ_OPEN  shift 26
	.  error

	preface  goto 27


state 23
	content : preface COMMA . parts author_notes  (5)

	OBJ_OPEN  shift 28
	.  error

	part  goto 29
	parts  goto 30


state 24
	dedication : OBJ_OPEN TAG ATT_SEPARATOR . DEDICATION COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (6)
	preface : OBJ_OPEN TAG ATT_SEPARATOR . PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	DEDICATION  shift 31
	PREFACE  shift 32
	.  error


state 25
	book : OBJ_OPEN TAG ATT_SEPARATOR BOOK COMMA edition CONTENT ATT_SEPARATOR ARRAY_OPEN content ARRAY_CLOSE OBJ_CLOSE .  (2)

	.  reduce 2


state 26
	preface : OBJ_OPEN . TAG ATT_SEPARATOR PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	TAG  shift 33
	.  error


state 27
	content : dedication COMMA preface . COMMA parts author_notes  (4)

	COMMA  shift 34
	.  error


state 28
	part : OBJ_OPEN . TAG ATT_SEPARATOR PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)
	part : OBJ_OPEN . TAG ATT_SEPARATOR PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)

	TAG  shift 35
	.  error


state 29
	parts : part .  (9)

	.  reduce 9


state 30
	content : preface COMMA parts . author_notes  (5)
	parts : parts . COMMA part  (10)
	author_notes : .  (51)

	COMMA  shift 36
	ARRAY_CLOSE  reduce 51

	author_notes  goto 37


state 31
	dedication : OBJ_OPEN TAG ATT_SEPARATOR DEDICATION . COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (6)

	COMMA  shift 38
	.  error


state 32
	preface : OBJ_OPEN TAG ATT_SEPARATOR PREFACE . COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	COMMA  shift 39
	.  error


state 33
	preface : OBJ_OPEN TAG . ATT_SEPARATOR PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	ATT_SEPARATOR  shift 40
	.  error


state 34
	content : dedication COMMA preface COMMA . parts author_notes  (4)

	OBJ_OPEN  shift 28
	.  error

	part  goto 29
	parts  goto 41


state 35
	part : OBJ_OPEN TAG . ATT_SEPARATOR PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)
	part : OBJ_OPEN TAG . ATT_SEPARATOR PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)

	ATT_SEPARATOR  shift 42
	.  error


state 36
	parts : parts COMMA . part  (10)
	author_notes : COMMA . OBJ_OPEN TAG ATT_SEPARATOR AUTHOR_NOTES COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN notes ARRAY_CLOSE OBJ_CLOSE  (52)

	OBJ_OPEN  shift 43
	.  error

	part  goto 44


state 37
	content : preface COMMA parts author_notes .  (5)

	.  reduce 5


state 38
	dedication : OBJ_OPEN TAG ATT_SEPARATOR DEDICATION COMMA . CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (6)

	CONTENT  shift 45
	.  error


state 39
	preface : OBJ_OPEN TAG ATT_SEPARATOR PREFACE COMMA . CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	CONTENT  shift 46
	.  error


state 40
	preface : OBJ_OPEN TAG ATT_SEPARATOR . PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	PREFACE  shift 32
	.  error


state 41
	content : dedication COMMA preface COMMA parts . author_notes  (4)
	parts : parts . COMMA part  (10)
	author_notes : .  (51)

	COMMA  shift 36
	ARRAY_CLOSE  reduce 51

	author_notes  goto 47


state 42
	part : OBJ_OPEN TAG ATT_SEPARATOR . PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)
	part : OBJ_OPEN TAG ATT_SEPARATOR . PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)

	PART  shift 48
	.  error


state 43
	part : OBJ_OPEN . TAG ATT_SEPARATOR PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)
	part : OBJ_OPEN . TAG ATT_SEPARATOR PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)
	author_notes : COMMA OBJ_OPEN . TAG ATT_SEPARATOR AUTHOR_NOTES COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN notes ARRAY_CLOSE OBJ_CLOSE  (52)

	TAG  shift 49
	.  error


state 44
	parts : parts COMMA part .  (10)

	.  reduce 10


state 45
	dedication : OBJ_OPEN TAG ATT_SEPARATOR DEDICATION COMMA CONTENT . ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (6)

	ATT_SEPARATOR  shift 50
	.  error


state 46
	preface : OBJ_OPEN TAG ATT_SEPARATOR PREFACE COMMA CONTENT . ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	ATT_SEPARATOR  shift 51
	.  error


state 47
	content : dedication COMMA preface COMMA parts author_notes .  (4)

	.  reduce 4


state 48
	part : OBJ_OPEN TAG ATT_SEPARATOR PART . COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)
	part : OBJ_OPEN TAG ATT_SEPARATOR PART . COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)

	COMMA  shift 52
	.  error


state 49
	part : OBJ_OPEN TAG . ATT_SEPARATOR PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)
	part : OBJ_OPEN TAG . ATT_SEPARATOR PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)
	author_notes : COMMA OBJ_OPEN TAG . ATT_SEPARATOR AUTHOR_NOTES COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN notes ARRAY_CLOSE OBJ_CLOSE  (52)

	ATT_SEPARATOR  shift 53
	.  error


state 50
	dedication : OBJ_OPEN TAG ATT_SEPARATOR DEDICATION COMMA CONTENT ATT_SEPARATOR . ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (6)

	ARRAY_OPEN  shift 54
	.  error


state 51
	preface : OBJ_OPEN TAG ATT_SEPARATOR PREFACE COMMA CONTENT ATT_SEPARATOR . ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	ARRAY_OPEN  shift 55
	.  error


state 52
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA . id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA . id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)

	ID  shift 56
	.  error

	id  goto 57


state 53
	part : OBJ_OPEN TAG ATT_SEPARATOR . PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)
	part : OBJ_OPEN TAG ATT_SEPARATOR . PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)
	author_notes : COMMA OBJ_OPEN TAG ATT_SEPARATOR . AUTHOR_NOTES COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN notes ARRAY_CLOSE OBJ_CLOSE  (52)

	PART  shift 48
	AUTHOR_NOTES  shift 58
	.  error


state 54
	dedication : OBJ_OPEN TAG ATT_SEPARATOR DEDICATION COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN . pcdata ARRAY_CLOSE OBJ_CLOSE  (6)

	PCDATA  shift 59
	.  error

	pcdata  goto 60


state 55
	preface : OBJ_OPEN TAG ATT_SEPARATOR PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN . pcdata ARRAY_CLOSE OBJ_CLOSE  (8)

	PCDATA  shift 59
	.  error

	pcdata  goto 61


state 56
	id : ID . ATT_SEPARATOR VALUE COMMA  (18)

	ATT_SEPARATOR  shift 62
	.  error


state 57
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id . title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id . CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)

	TITLE  shift 63
	CONTENT  shift 64
	.  error

	title  goto 65


state 58
	author_notes : COMMA OBJ_OPEN TAG ATT_SEPARATOR AUTHOR_NOTES . COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN notes ARRAY_CLOSE OBJ_CLOSE  (52)

	COMMA  shift 66
	.  error


state 59
	pcdata : PCDATA .  (7)

	.  reduce 7


state 60
	dedication : OBJ_OPEN TAG ATT_SEPARATOR DEDICATION COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata . ARRAY_CLOSE OBJ_CLOSE  (6)

	ARRAY_CLOSE  shift 67
	.  error


state 61
	preface : OBJ_OPEN TAG ATT_SEPARATOR PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata . ARRAY_CLOSE OBJ_CLOSE  (8)

	ARRAY_CLOSE  shift 68
	.  error


state 62
	id : ID ATT_SEPARATOR . VALUE COMMA  (18)

	VALUE  shift 69
	.  error


state 63
	title : TITLE . ATT_SEPARATOR VALUE COMMA  (19)

	ATT_SEPARATOR  shift 70
	.  error


state 64
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id CONTENT . ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)

	ATT_SEPARATOR  shift 71
	.  error


state 65
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id title . CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)

	CONTENT  shift 72
	.  error


state 66
	author_notes : COMMA OBJ_OPEN TAG ATT_SEPARATOR AUTHOR_NOTES COMMA . CONTENT ATT_SEPARATOR ARRAY_OPEN notes ARRAY_CLOSE OBJ_CLOSE  (52)

	CONTENT  shift 73
	.  error


state 67
	dedication : OBJ_OPEN TAG ATT_SEPARATOR DEDICATION COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE . OBJ_CLOSE  (6)

	OBJ_CLOSE  shift 74
	.  error


state 68
	preface : OBJ_OPEN TAG ATT_SEPARATOR PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE . OBJ_CLOSE  (8)

	OBJ_CLOSE  shift 75
	.  error


state 69
	id : ID ATT_SEPARATOR VALUE . COMMA  (18)

	COMMA  shift 76
	.  error


state 70
	title : TITLE ATT_SEPARATOR . VALUE COMMA  (19)

	VALUE  shift 77
	.  error


state 71
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id CONTENT ATT_SEPARATOR . ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (12)

	ARRAY_OPEN  shift 78
	.  error


state 72
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id title CONTENT . ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)

	ATT_SEPARATOR  shift 79
	.  error


state 73
	author_notes : COMMA OBJ_OPEN TAG ATT_SEPARATOR AUTHOR_NOTES COMMA CONTENT . ATT_SEPARATOR ARRAY_OPEN notes ARRAY_CLOSE OBJ_CLOSE  (52)

	ATT_SEPARATOR  shift 80
	.  error


state 74
	dedication : OBJ_OPEN TAG ATT_SEPARATOR DEDICATION COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE .  (6)

	.  reduce 6


state 75
	preface : OBJ_OPEN TAG ATT_SEPARATOR PREFACE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE .  (8)

	.  reduce 8


state 76
	id : ID ATT_SEPARATOR VALUE COMMA .  (18)

	.  reduce 18


state 77
	title : TITLE ATT_SEPARATOR VALUE . COMMA  (19)

	COMMA  shift 81
	.  error


state 78
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN . part_cont ARRAY_CLOSE OBJ_CLOSE  (12)

	OBJ_OPEN  shift 82
	.  error

	toc  goto 83
	part_cont  goto 84


state 79
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id title CONTENT ATT_SEPARATOR . ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE  (11)

	ARRAY_OPEN  shift 85
	.  error


state 80
	author_notes : COMMA OBJ_OPEN TAG ATT_SEPARATOR AUTHOR_NOTES COMMA CONTENT ATT_SEPARATOR . ARRAY_OPEN notes ARRAY_CLOSE OBJ_CLOSE  (52)

	ARRAY_OPEN  shift 86
	.  error


state 81
	title : TITLE ATT_SEPARATOR VALUE COMMA .  (19)

	.  reduce 19


state 82
	toc : OBJ_OPEN . TAG ATT_SEPARATOR TOC COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN items ARRAY_CLOSE OBJ_CLOSE  (20)

	TAG  shift 87
	.  error


state 83
	part_cont : toc . COMMA chapters lof_lot  (13)

	COMMA  shift 88
	.  error


state 84
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont . ARRAY_CLOSE OBJ_CLOSE  (12)

	ARRAY_CLOSE  shift 89
	.  error


state 85
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN . part_cont ARRAY_CLOSE OBJ_CLOSE  (11)

	OBJ_OPEN  shift 82
	.  error

	toc  goto 83
	part_cont  goto 90


state 86
	author_notes : COMMA OBJ_OPEN TAG ATT_SEPARATOR AUTHOR_NOTES COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN . notes ARRAY_CLOSE OBJ_CLOSE  (52)

	OBJ_OPEN  shift 91
	.  error

	note  goto 92
	notes  goto 93


state 87
	toc : OBJ_OPEN TAG . ATT_SEPARATOR TOC COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN items ARRAY_CLOSE OBJ_CLOSE  (20)

	ATT_SEPARATOR  shift 94
	.  error


state 88
	part_cont : toc COMMA . chapters lof_lot  (13)

	OBJ_OPEN  shift 95
	.  error

	chapter  goto 96
	chapters  goto 97


state 89
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE . OBJ_CLOSE  (12)

	OBJ_CLOSE  shift 98
	.  error


state 90
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont . ARRAY_CLOSE OBJ_CLOSE  (11)

	ARRAY_CLOSE  shift 99
	.  error


state 91
	note : OBJ_OPEN . TAG ATT_SEPARATOR NOTE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (55)

	TAG  shift 100
	.  error


state 92
	notes : note .  (53)

	.  reduce 53


state 93
	author_notes : COMMA OBJ_OPEN TAG ATT_SEPARATOR AUTHOR_NOTES COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN notes . ARRAY_CLOSE OBJ_CLOSE  (52)
	notes : notes . COMMA note  (54)

	COMMA  shift 101
	ARRAY_CLOSE  shift 102
	.  error


state 94
	toc : OBJ_OPEN TAG ATT_SEPARATOR . TOC COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN items ARRAY_CLOSE OBJ_CLOSE  (20)

	TOC  shift 103
	.  error


state 95
	chapter : OBJ_OPEN . TAG ATT_SEPARATOR CHAPTER COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN sections ARRAY_CLOSE OBJ_CLOSE  (27)

	TAG  shift 104
	.  error


state 96
	chapters : chapter .  (25)

	.  reduce 25


state 97
	part_cont : toc COMMA chapters . lof_lot  (13)
	chapters : chapters . COMMA chapter  (26)
	lof_lot : .  (14)

	COMMA  shift 105
	ARRAY_CLOSE  reduce 14

	lof_lot  goto 106


state 98
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE .  (12)

	.  reduce 12


state 99
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE . OBJ_CLOSE  (11)

	OBJ_CLOSE  shift 107
	.  error


state 100
	note : OBJ_OPEN TAG . ATT_SEPARATOR NOTE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (55)

	ATT_SEPARATOR  shift 108
	.  error


state 101
	notes : notes COMMA . note  (54)

	OBJ_OPEN  shift 91
	.  error

	note  goto 109


state 102
	author_notes : COMMA OBJ_OPEN TAG ATT_SEPARATOR AUTHOR_NOTES COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN notes ARRAY_CLOSE . OBJ_CLOSE  (52)

	OBJ_CLOSE  shift 110
	.  error


state 103
	toc : OBJ_OPEN TAG ATT_SEPARATOR TOC . COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN items ARRAY_CLOSE OBJ_CLOSE  (20)

	COMMA  shift 111
	.  error


state 104
	chapter : OBJ_OPEN TAG . ATT_SEPARATOR CHAPTER COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN sections ARRAY_CLOSE OBJ_CLOSE  (27)

	ATT_SEPARATOR  shift 112
	.  error


state 105
	lof_lot : COMMA . lof COMMA lot  (15)
	lof_lot : COMMA . lot  (16)
	lof_lot : COMMA . lof  (17)
	chapters : chapters COMMA . chapter  (26)

	OBJ_OPEN  shift 113
	.  error

	chapter  goto 114
	lof  goto 115
	lot  goto 116


state 106
	part_cont : toc COMMA chapters lof_lot .  (13)

	.  reduce 13


state 107
	part : OBJ_OPEN TAG ATT_SEPARATOR PART COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN part_cont ARRAY_CLOSE OBJ_CLOSE .  (11)

	.  reduce 11


state 108
	note : OBJ_OPEN TAG ATT_SEPARATOR . NOTE COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN pcdata ARRAY_CLOSE OBJ_CLOSE  (55)

	NOTE  shift 117
	.  error


state 109
	notes : notes COMMA note .  (54)

	.  reduce 54


state 110
	author_notes : COMMA OBJ_OPEN TAG ATT_SEPARATOR AUTHOR_NOTES COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN notes ARRAY_CLOSE OBJ_CLOSE .  (52)

	.  reduce 52


state 111
	toc : OBJ_OPEN TAG ATT_SEPARATOR TOC COMMA . CONTENT ATT_SEPARATOR ARRAY_OPEN items ARRAY_CLOSE OBJ_CLOSE  (20)

	CONTENT  shift 118
	.  error


state 112
	chapter : OBJ_OPEN TAG ATT_SEPARATOR . CHAPTER COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN sections ARRAY_CLOSE OBJ_CLOSE  (27)

	CHAPTER  shift 119
	.  error


state 113
	chapter : OBJ_OPEN . TAG ATT_SEPARATOR CHAPTER COMMA id title CONTENT ATT_SEPARATOR ARRAY_OPEN sections ARRAY_CLOSE OBJ_CLOSE  (27)
	lof : OBJ_OPEN . TAG ATT_SEPARATOR LOF COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN items ARRAY_CLOSE OBJ_CLOSE  (49)
	lot : OBJ_OPEN . TAG ATT_SEPARATOR LOT COMMA CONTENT ATT_SEPARATOR ARRAY_OPEN items ARRAY_CLOSE OBJ_CLOSE  (50)

	TAG  shift 120
	.  error


state 114
	chapters : chapters COMMA chapter .  (26)

	.  reduce 26

